--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,65 @@
     <link rel="stylesheet" href="style.css">
     <title>Pokemons</title>
 </head>
+
 <body>
     <h2>Pokes</h2>
 
-    <script src="/main.js"></script>
+    <div class="poke-container" id="poke-container">
+        <div class="pokemon" style="background-color: rgb(222,253,254);">
+            <div class="img-container">
+                <img src="https://cdn2.bulbagarden.net/upload/2/21/001Bulbasaur.png" alt="">
+
+            </div>
+            <div class="info">
+                <span class="number">#001</span>
+                <h3 class="name">Balbazaur</h3>
+                <small class="type">Type: <span>grass</span> </small>
+            </div>
+        </div>
+
+        <div class="pokemon" style="background-color: rgb(222,253,254);">
+            <div class="img-container">
+                <img src="https://cdn2.bulbagarden.net/upload/2/21/001Bulbasaur.png" alt="">
+
+            </div>
+            <div class="info">
+                <span class="number">#001</span>
+                <h3 class="name">Balbazaur</h3>
+                <small class="type">Type: <span>grass</span> </small>
+            </div>
+        </div>
+
+        <div class="pokemon" style="background-color: rgb(222,253,254);">
+            <div class="img-container">
+                <img src="https://cdn2.bulbagarden.net/upload/2/21/001Bulbasaur.png" alt="">
+
+            </div>
+            <div class="info">
+                <span class="number">#001</span>
+                <h3 class="name">Balbazaur</h3>
+                <small class="type">Type: <span>grass</span> </small>
+            </div>
+        </div>
+
+        <div class="pokemon" style="background-color: rgb(222,253,254);">
+            <div class="img-container">
+                <img src="https://cdn2.bulbagarden.net/upload/2/21/001Bulbasaur.png" alt="">
+
+            </div>
+            <div class="info">
+                <span class="number">#001</span>
+                <h3 class="name">Balbazaur</h3>
+                <small class="type">Type: <span>grass</span> </small>
+            </div>
+        </div>
+
+
+    </div>
+
+    </div>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
